<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/con_bg_them">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp">

        <RadioGroup
            android:id="@+id/radioGroup_them"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:weightSum="3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButton_system_them"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_default"
                android:textColor="@color/textView_them"
                app:buttonTint="@color/textView_app_color" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButton_light_them"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/light"
                android:textColor="@color/textView_them"
                app:buttonTint="@color/textView_app_color" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButton_dark_them"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/dark"
                android:textColor="@color/textView_them"
                app:buttonTint="@color/textView_app_color" />

        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_cancel_them"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="@color/textView_app_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView_ok_them"
            app:layout_constraintEnd_toStartOf="@+id/textView_ok_them"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_ok_them" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_ok_them"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/ok"
            android:textColor="@color/textView_app_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView_cancel_them"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_them" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

